# yes_flow

./: .gitignore  README.md  pyproject.toml
src/: crewai_flow.html  main.py
src/crews/everything_under_2_minutes_discovery_crew/: everything_in_2_minutes_discovery_crew.py
src/crews/everything_under_2_minutes_discovery_crew/config/: agents.yaml  tasks.yaml
src/crews/image_creator_crew/: image_creator_crew.py
src/crews/image_creator_crew/config/: agents.yaml  tasks.yaml
src/crews/pexels_creator_crew/: pexels_video_finder_crew.py
src/crews/pexels_creator_crew/config/: agents.yaml  tasks.yaml
src/crews/speech_to_text_crew/: speech_to_text_crew.py
src/crews/speech_to_text_crew/config/: agents.yaml  tasks.yaml
src/crews/text_and_speech_crew/: text_and_speech_crew.py
src/crews/text_and_speech_crew/config/: agents.yaml  tasks.yaml
src/crews/verse_discovery_crew/: verse_discovery_crew.py
src/crews/verse_discovery_crew/config/: agents.yaml  tasks.yaml
src/crews/video_crew/: video_crew.py
src/crews/video_crew/config/: agents.yaml  tasks.yaml
src/crews/youtube_crew/: youtube_crew.py
src/crews/youtube_crew/config/: agents.yaml  tasks.yaml
src/flow/: EverythingInSecondsFlow.py  YesFlow.py
src/resource/: Quran_Sure_Ayet_Listesi.csv  languages.csv  save.csv
src/tools/: downloader_tool.py  image_generator_tool.py  pexels_video_finder_tool.py  speech_to_text_tool.py  text_to_speech_tool.py  video_generator_tool.py  youtube_upload_tool.py
src/util/: DimensionUtil.py  LanguageUtil.py  VerseUtil.py  VoiceUtil.py
