[project]
name = "text_analysis_crew"
version = "0.1.0"
description = "text-analysis-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
]

[project.scripts]
kickoff = "text_analysis_crew.main:kickoff"
plot = "text_analysis_crew.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
